Add purchase plan functionality   23 May 2025  by Keshav Savita

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -548,6 +548,10 @@
         <activity
             android:name=".activity.TestingStripeActivity"
             android:exported="false" />
+        <activity
+            android:name=".activity.SelectPayMethodAct"
+            android:exported="false"
+            android:screenOrientation="portrait" />
 
         <!-- <activity
              android:exported="false"
