add  plan history and plan recommended functionality   26 May 2025  by Keshav Savita

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -553,6 +553,12 @@
             android:exported="false"
             android:screenOrientation="portrait" />
 
+
+        <activity
+            android:name=".activity.MyPlanHistoryAct"
+            android:exported="false"
+            android:screenOrientation="portrait" />
+
         <!-- <activity
              android:exported="false"
              android:name="com.braintreepayments.api.BraintreeBrowserSwitchActivity"
